# app/models/__init__.py
@@ -4,6 +4,7 @@ from .family import Family, UserFamilyRole
 from .widget import WidgetType, FamilyWidget, WidgetUserPermission, UserWidgetConfig
 from .todo import Todo
 from .weather import FamilyWeatherConfig
+from .timetable import TimetableEntry
 
 __all__ = [
     'User',
@@ -16,4 +17,5 @@ __all__ = [
     'UserWidgetConfig',
     'Todo',
     'FamilyWeatherConfig',
+    'TimetableEntry',
 ]
